[package]
name = "payments-engine"
version = "0.1.0"
edition = "2024"
authors = ["Nuno Sousa <nmlpsousa@gmail.com>"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
